# digital-marketing-skills

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  docker-compose.yml  eslint.config.js  fly.toml  mcp.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json  vercel.json
.cursor-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: [transport].ts
config/: ad-policies.yaml  app.example.yaml  approval-policies.yaml  channels.yaml  feature-flags.yaml  funnel-stages.yaml  industries.yaml  metrics-catalogue.yaml  regional-settings.yaml  retention-policies.yaml  risk-levels.yaml
docs/: approval-model.md  architecture.md  connectors.md  deployment.md  index.md  metrics.md  repository-protection.md  security.md  skill-authoring.md  workflows.md
evals/: README.md
examples/: README.md  ecommerce-google-ads.md  saas-growth-plan.md
public/: index.html
python/: README.md
schemas/: approval.schema.json  audience.schema.json  audit-event.schema.json  campaign.schema.json  connector.schema.json  content-brief.schema.json  error.schema.json  experiment.schema.json  measurement-plan.schema.json  report.schema.json  skill.schema.json  workflow.schema.json
scripts/: evaluate.ts  validate-skills.ts
src/utils/: ids.ts  (+2 more)
templates/: approval-request.md  campaign-plan.md  content-brief.md  marketing-report.md  measurement-plan.md
tests/: metric-engine.test.ts  policy-engine.test.ts  (+1 more)
(+234 files in other folders)
